@@ -20993,102 +20993,9 @@ void menu_display_window_reduce_all(MENU_ITEM_PARAMETERS)
 
 void menu_display_window_rearrange(MENU_ITEM_PARAMETERS)
 {
-	int origen_x=menu_origin_x();
-
-	//printf ("origen_x: %d\n",origen_x);
-
-	//Si abrir ventanas en zxdesktop o no, contar todo el ancho visible o bien solo el de zxdesktop
-
-	int ancho;
-
-	if (menu_ext_desktop_enabled_place_menu() ) {
-		//ancho=screen_ext_desktop_width/menu_char_width/menu_gui_zoom;
-		ancho=menu_get_width_characters_ext_desktop();
-	}
-
-	else ancho=scr_get_menu_width();
-
-	//printf ("ancho: %d\n",ancho);
-
-	int xfinal=origen_x+ancho;
-
-
-	int alto=scr_get_menu_height();
-
-	//printf ("alto: %d\n",alto);
-
-	int yfinal=alto;
-
-
-	//Empezamos una a una, desde la de mas abajo
-	zxvision_window *ventana;
-
-	ventana=zxvision_current_window;
-
-	if (ventana==NULL) return;
-
-	ventana=zxvision_find_first_window_below_this(ventana);
-
-	if (ventana==NULL) return;
-
-	int origen_y=0;
-
-	//Y de ahi para arriba
-	int x=origen_x;
-	int y=origen_y;
-
-	int alto_maximo_en_fila=0;
-
-	int cambio_coords_origen=0;
-
-	while (ventana!=NULL) {
-
-		debug_printf (VERBOSE_DEBUG,"Setting window %s to %d,%d",ventana->window_title,x,y);
-
-		ventana->x=x;
-		ventana->y=y;
-
-		//Y guardar la geometria
-		util_add_window_geometry_compact(ventana);
-
-		if (ventana->visible_height>alto_maximo_en_fila) alto_maximo_en_fila=ventana->visible_height;
-
-		int ancho_antes=ventana->visible_width;
-
-		ventana=ventana->next_window;
-		if (ventana!=NULL) {
-			x +=ancho_antes;
-			//printf ("%d %d %d\n",x,ventana->visible_width,ancho);
-			if (x+ventana->visible_width>xfinal) {
-
-				//printf ("Next column\n");
-				//Siguiente fila
-				x=origen_x;
-
-				y+=alto_maximo_en_fila;
-
-				alto_maximo_en_fila=0;
-
-
-			}
-
-			//Si volver al principio
-			if (y+ventana->visible_height>yfinal) {
-
-				debug_printf (VERBOSE_DEBUG,"Restart x,y coordinates");
-
-				//alternamos coordenadas origen, para darles cierto "movimiento", 4 caracteres derecha y abajo
-				cambio_coords_origen ^=4;
-
-				x=origen_x + cambio_coords_origen;
-				y=origen_y + cambio_coords_origen;
-						
-			}
-		}
-	}
-
-	cls_menu_overlay();
+	zxvision_rearrange_background_windows();
 }
+
 
 
 void menu_windows(MENU_ITEM_PARAMETERS)
